--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-dotenv": "^0.1.3",
     "react-icons": "^5.0.1"
   },
   "devDependencies": {
