--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.5",
     "dotenv": "^16.4.5",
     "next": "14.1.0",
     "react": "^18",
