--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/leaflet": "^1.9.12",
     "axios": "^1.7.5",
     "dotenv": "^16.4.5",
+    "leaflet": "^1.9.4",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-dotenv": "^0.1.3",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
+    "react-stars": "^2.2.5",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/node": "^20",
