--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-stars": "^2.2.4",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "typescript": "^5"
